[package]
name = "unsafe-now"
version = "0.1.0"
authors = [ "Mathspy <mathspy257@gmail.com>" ]
edition = "2018"

[dependencies]
geiger = "0.3.1"
git2 = "0.9.1"
http = "0.1.17"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
url = "1.7.2"
walkdir = "2.2.8"

[[bin]]
name = "index"
path = "index.rs"
